--- a/webapp/templates/home.html
+++ b/webapp/templates/home.html
@@ -13,6 +13,16 @@
         <p class="lead">
           <a href="#">TD Development</a>
         </p>
+        <p >
+          Determine if the food your are eating is: 
+        </p>
+         <p >
+           Apple Pie, Carrot Cake, Cheese Cake, Cup Cakes, Donuts, Dumplings  
+        </p>
+         <p >
+          More food groups and recipes coming soon! 
+        </p>
+       
         <hr>
         <!-- Preview Image -->
 		<div class="image_banner" >
