--- a/webapp/templates/base.html
+++ b/webapp/templates/base.html
@@ -5,7 +5,13 @@
     <meta name="TD Development" content="Food Net AI Partner">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    
     <link rel="stylesheet" href="../static/css/style.css">
+	<link rel="stylesheet" href="../static/css/dropzone.min.css">
+	<link rel="stylesheet" href="../static/css/style.css">
+	<link rel="stylesheet" href="../static/css/bootstrap.min.css">
+	<link rel="stylesheet" href="../static/css/basic.css">
+
   </head>
   <body>
     {% block body %}{% endblock %}
