--- a/webapp/templates/home.html
+++ b/webapp/templates/home.html
@@ -2,9 +2,102 @@
 {% block body %}
 {% include "navbar.html" %}
 <section class="hero is-primary is-bold is-large">
-  <div class="hero-body"></div>
+
+<div class="container">
+    <div class="row">
+      <!-- Post Content Column -->
+      <div class="col-12">
+        <!-- Title -->
+        <h1 class="mt-4">Uplaod your Food Image</h1>
+        <!-- Author -->
+        <p class="lead">
+          <a href="#">Food AI</a>
+        </p>
+        <p >
+          Determine if the food your are eating is: 
+        </p>
+         <p >
+           Apple Pie, Carrot Cake, Cheese Cake, Cup Cakes, Donuts, Dumplings  
+        </p>
+         <p >
+          More food groups and recipes coming soon! 
+        </p>
+       
+        <hr>
+        <!-- Preview Image -->
+		<div class="image_banner" >
+        <img class="img-fluid rounded" src="../static/img/negative-spaces.jpg" alt="">
+		</div>
+		
+     <div class="image-section" style="">
+        <div class="img-preview">
+            <div >
+			  <img id="imagePreview" class="img-fluid " src="" alt="">
+            </div>
+        </div>
+		
+        <div>
+            <button type="button" class="btn btn-primary btn-lg " id="btn-predict">Predict!</button>
+        </div>
+    </div>
+
+        <hr>
+		 
+	<!--
+	<form action="/file-upload"	class="dropzone" id="my-awesome-dropzone">
+	</form>
+	<input type="file" name="file" />
+      </div>
+    </div>
+  </div>
+  -->
+  
+<div>
+    <form id="upload-file" method="post" enctype="multipart/form-data">
+        <label for="imageUpload" class="upload-label">
+            Choose...
+        </label>
+        <input type="file" name="image" id="imageUpload" accept=".png, .jpg, .jpeg">
+    </form>
+
+    <div class="loader" style="display:none;"></div>
+</div>
+
 </section>
+
+<div class="modal fade" id="ResultModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Results</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true"></span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form>
+		<h3 id="result">
+			<span> </span>
+		</h3>
+  
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
 {% endblock %}
 {% block scripts %}
 <script src="../static/js/scripts.js"></script>
+<script src="../static/js/dropzone.js"></script>
+<script src="../static/js/bootstrap.min.js"></script>
+<script src="../static/js/dropzone-amd-module.js"></script>
+<script src="../static/js/dropzone-amd-module.js"></script>
+<script src="../static/js/home.js"></script>
+<script src="{{ url_for('static', filename='js/main.js') }}" type="text/javascript"></script>    
+
 {% endblock %}
