--- a/webapp/templates/login.html
+++ b/webapp/templates/login.html
@@ -4,8 +4,8 @@
   <nav class="navbar is-transparent">
     <div class="navbar-brand">
       <a class="navbar-item" href="/">
-        <img src="https://github.com/anfederico/Flaskex/raw/master/media/flaskex-logo.png" alt="Flaskex">
-        <h6 href="/" class="subtitle"><strong>Flaskex</strong></h6>
+        <img src="/static/img/logo.svg" alt="Flaskex">
+        <h6 href="/" class="subtitle"><strong>Food AI</strong></h6>
       </a>
       <div id="navbar-burger-id" class="navbar-burger burger" data-target="navbar-menu-id">
         <span></span>
@@ -54,11 +54,11 @@
       <div class="columns">
         <div class="column is-auto">
           <br>
-          <p class="title is-2">Flaskex</p>
-          <p class="subtitle is-4"><i>Simple example for rapid prototyping</i></p>
-          <p class="subtitle is-5">&#x2022 Encrypted user authorizaton</p>
-          <p class="subtitle is-5">&#x2022 Ready to go database system</p>
-          <p class="subtitle is-5">&#x2022 User login, signup, and settings</p>           
+          <p class="title is-2">Food AI</p>
+          <p class="subtitle is-4"><i>Find out what are you eating</i></p>
+          <p class="subtitle is-5">&#x2022 Quick photo identification</p>
+          <p class="subtitle is-5">&#x2022 Get recipes for the food you eat</p>
+          <p class="subtitle is-5">&#x2022 User login, signup, and settings and more features coming soon</p>           
         </div>
         <div class="column is-auto">
           <div id="signup-box" class="signup-box">
